<resources>
    <string name="app_name">PodPlay</string>
    <string name="search_hint">Enter podcast search</string>
    <string name="search">Search</string>
    <string name="podcast_image">Podcast Image</string>
    <string name="name">Name</string>
    <string name="last_updated">Last updated</string>
    <string name="title">Title</string>
    <string name="year_start">01/01/21</string>
    <string name="time_zero">00:00</string>
    <string name="description">Description</string>
    <string name="subscribe">Subscribe</string>
    <string name="ok_button">OK</string>
    <string name="subscribed_podcast">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="episode_notification_title">New episodes</string>
    <string name="episode_notification_text">%1$d new episode(s) for %2$s</string>
</resources>